# transitions_with_tests

./: README.md  pyproject.toml
src/client/: final_superhero.py  matter.py  narcoleptic_superhero.py  predefined_model.py  super_matter.py  typed_machine.py  typed_model.py
src/generator/: generated_model.py  typed_machine_generator.py
src/tests/: test_narcoleptic_superhero.py
tests/: test_final_superhero.py  test_generated_typed_machine.py  test_lump_matter.py  test_narcoleptic_superhero.py  test_predefined_model.py  test_super_matter.py  test_typed_machine.py
text_content/: pytest_custom_markers.md  readme.md  unittest_mock_patches.md  vscode_pytest.md
